--- a/Consultoria/nbproject/private/private.properties
+++ b/Consultoria/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/jose/.netbeans/7.3.1/build.properties
+user.properties.file=C:\\Users\\Cristopher Inces\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
