--- a/Consultoria/nbproject/project.properties
+++ b/Consultoria/nbproject/project.properties
@@ -28,10 +28,13 @@ dist.jar=${dist.dir}/Consultoria.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jxl.jar=/home/jose/Descargas/Progra RRHH/jxl.jar
+file.reference.jxl.jar-1=C:\\Users\\Cristopher Inces\\Desktop\\Proyecto_RRHH-master\\jxl.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jxl.jar}
+    ${file.reference.jxl.jar}:\
+    ${file.reference.jxl.jar-1}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,7 +59,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=consultoria.Consultoria
+main.class=Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
