Vista de información de profesores

--- a/Consultoria/nbproject/project.properties
+++ b/Consultoria/nbproject/project.properties
@@ -29,12 +29,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jxl.jar=/home/jose/Descargas/Progra RRHH/jxl.jar
 file.reference.jxl.jar-1=C:\\Users\\Cristopher Inces\\Desktop\\Proyecto_RRHH-master\\jxl.jar
+file.reference.jxl.jar-2=..\\jxl.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jxl.jar}:\
     ${file.reference.jxl.jar-1}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jxl.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
