--- a/Consultoria/nbproject/project.properties
+++ b/Consultoria/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Consultoria
+application.vendor=Diego
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,17 +27,15 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Consultoria.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.jxl.jar=/home/jose/Descargas/Progra RRHH/jxl.jar
-file.reference.jxl.jar-1=C:\\Users\\Cristopher Inces\\Desktop\\Proyecto_RRHH-master\\jxl.jar
-file.reference.jxl.jar-2=..\\jxl.jar
+file.reference.AbsoluteLayout.jar=lib\\AbsoluteLayout.jar
+file.reference.jxl.jar=lib\\jxl.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jxl.jar}:\
-    ${file.reference.jxl.jar-1}:\
-    ${libs.absolutelayout.classpath}:\
-    ${file.reference.jxl.jar-2}
+    ${file.reference.AbsoluteLayout.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
