--- a/Consultoria/nbproject/project.properties
+++ b/Consultoria/nbproject/project.properties
@@ -30,12 +30,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout.jar=lib\\AbsoluteLayout.jar
+file.reference.itextpdf-5.3.5.jar=lib\\itextpdf-5.3.5.jar
 file.reference.jxl.jar=lib\\jxl.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jxl.jar}:\
-    ${file.reference.AbsoluteLayout.jar}
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.itextpdf-5.3.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
